Fix spacing in sections

--- a/client/src/pages/Home/HomePage.css
+++ b/client/src/pages/Home/HomePage.css
@@ -207,16 +207,6 @@ body {
   width: fill-available;
 }
 
-.section-two hr,
-.section-three hr,
-.section-four hr {
-  width: 100px;
-  border-radius: 10px;
-  border: 2px solid #4293f5;
-  margin-left: 45%;
-}
-
-.section-two h1,
 .section-two h1,
 .section-three h1,
 .section-four h1 {
@@ -235,10 +225,10 @@ body {
   font-size: 20px;
   font-weight: 300;
 }
-.bashed-border {
+.dashed-border {
   margin-top: 10%;
 }
-.bashed-border ul li {
+.dashed-border ul li {
   width: 3%;
   border: 2px solid #eaeaea;
   display: inline-block;
@@ -283,8 +273,8 @@ path, circle{
 }
 .research-area-bg {
   background: #f5f5f5;
-  height: 100vh;
 }
+
 .btn-outline-blue {
   outline: #0f81dc !important;
   border: 1px solid #0f81dc !important;
@@ -406,10 +396,6 @@ footer p {
 .change-scroll-indicator li:hover {
   background: #0f81dc;
 }
-.section-three-container {
-  background: #f5f5f5;
-}
-
 .icon-container {
   float: right;
 }
@@ -494,17 +480,12 @@ nav {
     height: 45vh;
   }
 
-  .section-two hr,
-  .section-three hr,
-  .section-four hr {
-    width: 40%;
-    margin-left: 30%;
-  }
   /* .shift-top img:hover{
     transform: scale(2);
     cursor: pointer!important;
   } */
-  .bashed-border ul {
+
+  .dashed-border ul {
     display: none;
   }
   .shift-top {
@@ -514,7 +495,6 @@ nav {
   .show-footer-mobile {
     display: block !important;
   }
-  .section-two h1,
   .section-two h1,
   .section-three h1,
   .section-four h1 {
@@ -588,20 +568,15 @@ nav {
   .header-heading .underlined-text {
     font-size: 24px;
   }
-  #ptf-laptop {
-    padding-top: 6%!important;
-  }
-  #ptf-sol-laptop{
-    padding-top: 1%!important;
-  }
-  #ptf-tech-section{
-    padding-top: 5%!important;
-  }
 }
 
 .card {
   text-decoration: unset;
   color: unset;
+}
+
+.research-card {
+  margin-bottom: 1em;
 }
 
 .research-card:hover {
@@ -611,4 +586,42 @@ nav {
   cursor: pointer;
   text-decoration: unset !important;
   color: unset !important;
+}
+
+@media (max-width: 767px) {
+  .dashed-border {
+    visibility: hidden;
+  }
+}
+
+@media (min-width: 725px) {
+  .section {
+    padding-top: 10vh;
+  }
+  
+  .research-area-bg {
+    height: 100vh;
+  }
+}
+
+.section-title {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.section-title h1 {
+  display: inline-block;
+  position: relative;
+}
+
+.section-title h1::after {
+  content: "";
+  height: 1px;
+  width: 80%;
+  position: absolute;
+  border: 2px solid #4293f5;
+  bottom: -.1em;
+  left: 50%;
+  transform: translate(-50%);
+  -webkit-transition: all 1s;
+  transition: all 1s;
 }
